2019-08-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Initial version 0.0.1