@@ -1,7 +1,7 @@
 Package: plr
 Title: Utility Functions for 'PrairieLearn' and R
-Version: 0.0.1
-Date: 2019-08-31
+Version: 0.0.2
+Date: 2019-09-01
 Author: Dirk Eddelbuettel and Alton Barbehenn
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: 'PrairieLearn' is an online problem-driven learning
