@@ -1,3 +1,3 @@
 importFrom(unix, eval_safe, user_info)
 
-export(source_and_eval_safe)
+export(source_and_eval_safe, eval_safe_as)
